--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ body {
     margin: 10px auto;
     color: #d2d2d2;
     font-family: sans-serif;
-    max-width: 800px;
+    width: 75%;
     font-size: 18px;
     line-height: 1.5;
     padding: 20px 0px;
@@ -25,6 +25,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    border-radius: 5px;
 }
 
 li {
@@ -45,4 +46,17 @@ li a:hover {
 
 li a:active {
 	background-color: #333333;
+}
+
+@media only screen and (max-width:620px) {
+    body {
+        width: 95%;
+    }
+    ul {
+    	width: 95%;
+        margin: 0 auto;
+    }
+    li {
+        width: 100%;
+    }
 }
